fix: fix problem with router
