# router/router.go
@@ -16,6 +16,8 @@ func SetupGinServer() *gin.Engine {
 	apiv1.GET("/", func(c *gin.Context) {
 		c.JSON(200, "pick api")
 	})
+	
+	apiv1.GET("/price_info/:coin_ids", GetCoinPriceInfo)
 	// the api to get the transaction record
 	apiv1.GET("/transaction/:address", GetTransaction)
 
